--- a/src/April2024.css
+++ b/src/April2024.css
@@ -6,7 +6,7 @@
     color:white;
     font-weight: bold;
     border:solid 3px;
-    width: 100%;
+    width: 100vw;
     height: 83vh;
     background: #e1eae7;
     position:absolute; 
@@ -43,43 +43,70 @@
     color:white
     } 
 
-/* #left-mountain {
-        width: 100%;
-        height: 280px;
-        background: linear-gradient( rgb(122,180,140), rgb(163,212,104), rgb(209,221,147));
-        position:absolute;
-        transform:skew(0deg, 10deg);
-        margin-bottom:0%;
-        -webkit-transform:skew(0deg, 10deg);
-        -moz-transform:skew(0deg, 10deg);
-        -ms-transform:skew(0deg, 10deg);
-        -o-transform:skew(0deg, 10deg);
+
+ 
+@media screen and (max-width:401px) {
+
+.mountainForeground, .mountainMiddle, .mountainBackground{
+    transform:scale(50%) translate(-150px,0px);
+    -webkit-transform:scale(50%) translate(-150px,0px);
+    -moz-transform:scale(50%) translate(-150px,0px);
+    -ms-transform:scale(50%) translate(-150px,0px);
+    -o-transform:scale(50%) translate(-150px,0px);
 }
 
-#right-mountain {
-        width: 280px;
-        height: 280px;
-        margin-top:10vh;
-        background: linear-gradient( rgb rgb(122,180,140), rgb(163,212,104), rgb(209,221,147));
-        position:absolute;
-        transform:skew(0deg, 34deg);
-        -webkit-transform:skew(0deg, 34deg);
-        -moz-transform:skew(0deg, 34deg);
-        -ms-transform:skew(0deg, 34deg);
-        -o-transform:skew(0deg, 34deg);
+#gradSpringSun{
+    transform:translateY(-300px);
+    -webkit-transform:translateY(-300px);
+    -moz-transform:translateY(-300px);
+    -ms-transform:translateY(-300px);
+    -o-transform:translateY(-300px);
 }
 
-.ground {
-    width: 100vw;
-    height: 39vh;
-    background: linear-gradient( rgb(163,212,104), rgb(209,221,147) );
-    position: absolute;
-    margin-top:23vh;
-    width:100vw;
-    
-  } */
+#ground{
+   width:400vw;
+   x:-50px;
+   y:250px;
+   height:100px;
+}
+
+.April2024header{
+    height:50vh;
+}
 
 
 
+#swaledaleSheep1{ transform:scale(50%) translate(-200px,0px); -webkit-transform:scale(50%) translate(-200px,0px); -moz-transform:scale(50%) translate(-200px,0px); -ms-transform:scale(50%) translate(-200px,0px); -o-transform:scale(50%) translate(-200px,0px); overflow: visible;
+}
 
+
+#swaledaleSheep2{
+    transform:scale(50%) translate(-600px,0px);
+    -webkit-transform:scale(50%) translate(-600px,0px);
+    -moz-transform:scale(50%) translate(-600px,0px);
+    -ms-transform:scale(50%) translate(-600px,0px);
+    -o-transform:scale(50%) translate(-600px,0px);
+    overflow: visible;
+}
+
+#lamb1{
+    transform:scale(60%) translate(-200px,0px);
+    -webkit-transform:scale(60%) translate(-200px,0px);
+    -moz-transform:scale(60%) translate(-200px,0px);
+    -ms-transform:scale(60%) translate(-200px,0px);
+    -o-transform:scale(60%) translate(-200px,0px);
+    overflow: visible;
+}
+
+
+#lamb2{
+    transform:scale(60%) translate(-200px,0px);
+    -webkit-transform:scale(60%) translate(-200px,0px);
+    -moz-transform:scale(60%) translate(-200px,0px);
+    -ms-transform:scale(60%) translate(-200px,0px);
+    -o-transform:scale(60%) translate(-200px,0px);
+    overflow: visible;
+}
+
+} 
 
