--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -16,3 +16,29 @@
     -ms-border-radius:15%;
     -o-border-radius:15%;
   } 
+
+  @media screen and (max-width:401px) {
+    body #button{
+      display:block;
+      position:absolute;
+      height:auto;
+      width:60%;
+      background-color:gray;
+      border:black 2px solid;
+      text-align:center;
+      font-size: large;
+      font-weight: bold;
+      padding:2%;
+      color:white;
+      margin-top: 11%;
+      margin-left:25%;
+      margin-right:25%;
+      border-radius:15%;
+      -webkit-border-radius:15%;
+      -moz-border-radius:15%;
+      -ms-border-radius:15%;
+      -o-border-radius:15%;
+    }  
+
+  }
+
