--- a/src/components/dropdown.css
+++ b/src/components/dropdown.css
@@ -6,6 +6,7 @@
     border: solid  #36454F 2px;
     box-sizing:border-box;
     margin-top:0%;
+    margin-bottom: 10%;
     padding-top: 2%;
     padding-bottom: 2%;
 }
