--- a/src/April2024.css
+++ b/src/April2024.css
@@ -43,8 +43,74 @@
     color:white
     } 
 
+.datenewsDiv{
+    border:solid #757c88 4px;
+    background-color:#5e8d5a;
+    display:flex;
+    flex-direction:column;
+    margin-top: 10vh;
+    margin-bottom:5vh;
+  }
+  
+  .date{
+    color:black;
+    border:solid 3px #757c88;
+    background-color:#86B251;
+    text-align: center;
+    padding:10px 10px 10px 10px;
+    margin:5px;
+    font-size:large;
+  }
 
- 
+  .news{
+    color:black;
+    border:solid 3px #757c88;
+    background-color:#86B251;
+    text-align: center;
+    padding:10px 10px 10px 10px;
+    margin:5px;
+    font-size:medium;
+    font-weight:400;
+  }
+  
+  .blogPhotoDiv{
+    display:flex;
+    flex-direction: row;
+    background-color: #86B251;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    margin-top:2%;
+  }
+  
+  .blogPhoto img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:70%;
+    height:70%;
+    border:solid grey;
+    border-radius:30px;
+    }
+
+    fig{
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right:auto;
+      }
+      
+      fig img {
+        vertical-align: top;
+      }
+      fig figcaption {
+        text-align: center;
+        font-family: bold;
+        color:black;
+        font-size:80%;
+      }
+  
+
+
 @media screen and (max-width:401px) {
 
 .mountainForeground, .mountainMiddle, .mountainBackground{
