--- a/src/April2024.css
+++ b/src/April2024.css
@@ -45,7 +45,7 @@
 
 .datenewsDiv{
     border:solid #757c88 4px;
-    background-color:#5e8d5a;
+    background-color:#8bb285;
     display:flex;
     flex-direction:column;
     margin-top: 10vh;
@@ -55,7 +55,7 @@
   .date{
     color:black;
     border:solid 3px #757c88;
-    background-color:#86B251;
+    background-color:#b3e5ab;
     text-align: center;
     padding:10px 10px 10px 10px;
     margin:5px;
@@ -65,18 +65,18 @@
   .news{
     color:black;
     border:solid 3px #757c88;
-    background-color:#86B251;
+    background-color:#b3e5ab;
     text-align: center;
     padding:10px 10px 10px 10px;
     margin:5px;
     font-size:medium;
-    font-weight:400;
+    font-weight:bold;
   }
   
   .blogPhotoDiv{
     display:flex;
     flex-direction: row;
-    background-color: #86B251;
+    background-color: #b3e5ab;
     padding-bottom: 15%;
     padding-top: 5%;
     margin-top:2%;
@@ -102,7 +102,7 @@
       fig img {
         vertical-align: top;
       }
-      fig figcaption {
+      fig figcaptionApril {
         text-align: center;
         font-family: bold;
         color:black;
