--- a/src/April2024.css
+++ b/src/April2024.css
@@ -58,7 +58,18 @@
     text-align: center;
     padding:10px 10px 10px 10px;
     margin:5px;
-    font-size:0.8em;
+    font-size:1.2rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+
+  .newsheader{
+    color:#36454F;
+    border:solid 3px #757c88;
+    background-color:#b3e5ab;
+    text-align: center;
+    padding:10px 10px 10px 10px;
+    margin:5px;
+    font-size:1.2rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
@@ -66,10 +77,10 @@
     color:#36454F;
     border:solid 3px #757c88;
     background-color:#b3e5ab;
-    text-align: center;
+    text-align: left;
     padding:10px 10px 10px 10px;
     margin:5px;
-    font-size:0.6em;
+    font-size:1.0rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   
