--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -9,6 +9,7 @@
     font-size: large;
     font-weight: bold;
     color:white;
+    text-decoration: underline;
     margin:5% 20% 5% 60%;
     border-radius:15%;
     -webkit-border-radius:15%;
