Correction of various responsiveness errors

--- a/src/April2024.css
+++ b/src/April2024.css
@@ -1,176 +1,3 @@
-
-.April2024header {
-    display:block;
-    text-align: center;
-    font-size: 1.75em;
-    color:white;
-    font-weight: bold;
-    border:solid 3px;
-    width: 100vw;
-    height: 83vh;
-    background: #e1eae7;
-    position:absolute; 
-
-#April2024title{
-    display:block;
-    text-align: center;
-    margin-top:2%;
-    color: 	#52555c;
-}
-
- #backbuttonApril{
-    display:block;
-    position:absolute;
-    height:50px;
-    width:15%;
-    background-color:gray;
-    border:black 2px solid;
-    text-align: center;
-    font-size: large;
-    font-weight: bold;
-    color:white;
-    margin: 5% 25% 5% 75%;
-    border-radius:15%;
-    -webkit-border-radius:15%;
-    -moz-border-radius:15%;
-    -ms-border-radius:15%;
-    -o-border-radius:15%;
-  } 
-}
-
-.backbuttonLink{
-    color:white
-    } 
-
-.datenewsDiv{
-    border:solid #757c88 4px;
-    background-color:#8bb285;
-    display:flex;
-    flex-direction:column;
-    margin-top: 10vh;
-    margin-bottom:5vh;
-  }
-  
-  .date{
-    color:#36454F;
-    border:solid 3px #757c88;
-    background-color:#b3e5ab;
-    text-align: center;
-    padding:10px 10px 10px 10px;
-    margin:5px;
-    font-size:1.2rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-
-  .newsheader{
-    color:#36454F;
-    border:solid 3px #757c88;
-    background-color:#b3e5ab;
-    text-align: center;
-    padding:10px 10px 10px 10px;
-    margin:5px;
-    font-size:1.2rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-
-  .news{
-    color:#36454F;
-    border:solid 3px #757c88;
-    background-color:#b3e5ab;
-    text-align: left;
-    padding:10px 10px 10px 10px;
-    margin:5px;
-    font-size:1.0rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-  
-  .blogPhotoDiv{
-    display:flex;
-    flex-direction: row;
-    background-color: #b3e5ab;
-    padding-bottom: 20%;
-    padding-top: 5%;
-    margin-top:2%;
-  }
-  
-  .blogPhoto img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width:70%;
-    height:70%;
-    border:solid grey;
-    border-radius:30px;
-    }
-
-    fig{
-        display: flex;
-        flex-direction: column;
-        margin-left: auto;
-        margin-right:auto;
-      }
-      
-      fig img {
-        vertical-align: top;
-      }
-      fig figcaptionApril {
-        text-align: center;
-        font-family: bold;
-        color:#36454F;
-        font-size:60%;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        overflow-wrap:normal;
-        padding:5%;
-      }
- 
-      /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-@media screen and (min-width:402px) and (max-width:900px){
-  .blogPhotoDiv{
-    display:flex;
-    flex-direction: column;
-    background-color: #b3e5ab;
-    padding-bottom: 15%;
-    padding-top: 5%;
-    margin-top:2%;
-  }
-
-    /*To ensure on ipad screens and larger mobiles that the ground extends to meet the upper margin of the darker body colour */
-    #ground{
-      width:400vw;
-      x:-50px;
-      y:480px;
-      height:400px;
-   } 
-
-}
-
-@media screen and (max-width:401px) {
-
-   /*To ensure on mobile screens below 401px width (this includes one plus phones) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
-
-.mountainForeground, .mountainMiddle, .mountainBackground{
-    transform:scale(50%) translate(-150px,0px);
-    -webkit-transform:scale(50%) translate(-150px,0px);
-    -moz-transform:scale(50%) translate(-150px,0px);
-    -ms-transform:scale(50%) translate(-150px,0px);
-    -o-transform:scale(50%) translate(-150px,0px);
-}
-
-#gradSpringSun{
-    transform:translateY(-300px);
-    -webkit-transform:translateY(-300px);
-    -moz-transform:translateY(-300px);
-    -ms-transform:translateY(-300px);
-    -o-transform:translateY(-300px);
-}
-
-#ground{
-  width:400vw;
-  x:-50px;
-  y:260px;
-  height:400px;
-} 
-
 .April2024header {
   display:block;
   text-align: center;
@@ -179,44 +6,125 @@
   font-weight: bold;
   border:solid 3px;
   width: 100vw;
-  height: 50vh;
+  height: 83vh;
   background: #e1eae7;
   position:absolute; 
 
+#April2024title{
+  display:block;
+  text-align: center;
+  margin-top:2%;
+  color: 	#52555c;
+}
+
+#backbuttonApril{
+  display:block;
+  position:absolute;
+  height:50px;
+  width:15%;
+  background-color:gray;
+  border:black 2px solid;
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+  color:white;
+  margin: 5% 25% 5% 75%;
+  border-radius:15%;
+  -webkit-border-radius:15%;
+  -moz-border-radius:15%;
+  -ms-border-radius:15%;
+  -o-border-radius:15%;
 } 
-
-#swaledaleSheep1{ transform:scale(50%) translate(-200px,0px); -webkit-transform:scale(50%) translate(-200px,0px); -moz-transform:scale(50%) translate(-200px,0px); -ms-transform:scale(50%) translate(-200px,0px); -o-transform:scale(50%) translate(-200px,0px); overflow: visible;
 }
 
-#swaledaleSheep2{
-    transform:scale(50%) translate(-600px,0px);
-    -webkit-transform:scale(50%) translate(-600px,0px);
-    -moz-transform:scale(50%) translate(-600px,0px);
-    -ms-transform:scale(50%) translate(-600px,0px);
-    -o-transform:scale(50%) translate(-600px,0px);
-    overflow: visible;
+.backbuttonLink{
+  color:white
+  } 
+
+.datenewsDiv{
+  border:solid #757c88 4px;
+  background-color:#8bb285;
+  display:flex;
+  flex-direction:column;
+  margin-top: 10vh;
+  margin-bottom:5vh;
 }
 
-#lamb1{
-    transform:scale(60%) translate(-200px,0px);
-    -webkit-transform:scale(60%) translate(-200px,0px);
-    -moz-transform:scale(60%) translate(-200px,0px);
-    -ms-transform:scale(60%) translate(-200px,0px);
-    -o-transform:scale(60%) translate(-200px,0px);
-    overflow: visible;
+.date{
+  color:#36454F;
+  border:solid 3px #757c88;
+  background-color:#b3e5ab;
+  text-align: center;
+  padding:10px 10px 10px 10px;
+  margin:5px;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
-#lamb2{
-    transform:scale(60%) translate(-200px,0px);
-    -webkit-transform:scale(60%) translate(-200px,0px);
-    -moz-transform:scale(60%) translate(-200px,0px);
-    -ms-transform:scale(60%) translate(-200px,0px);
-    -o-transform:scale(60%) translate(-200px,0px);
-    overflow: visible;
+.newsheader{
+  color:#36454F;
+  border:solid 3px #757c88;
+  background-color:#b3e5ab;
+  text-align: center;
+  padding:10px 10px 10px 10px;
+  margin:5px;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-/*To ensure on mobile screens below 401px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+.news{
+  color:#36454F;
+  border:solid 3px #757c88;
+  background-color:#b3e5ab;
+  text-align: left;
+  padding:10px 10px 10px 10px;
+  margin:5px;
+  font-size:1.0rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.blogPhotoDiv{
+  display:flex;
+  flex-direction: row;
+  background-color: #b3e5ab;
+  padding-bottom: 20%;
+  padding-top: 5%;
+  margin-top:2%;
+}
+
+.blogPhoto img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:70%;
+  height:70%;
+  border:solid grey;
+  border-radius:30px;
+  }
+
+  fig{
+      display: flex;
+      flex-direction: column;
+      margin-left: auto;
+      margin-right:auto;
+    }
+    
+    fig img {
+      vertical-align: top;
+    }
+
+    .aprilfigcaption {
+      text-align: center;
+      font-family: bold;
+      color:#36454F;
+      font-size:60%;
+      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      overflow-wrap:normal;
+      padding:5%;
+    }
+
+    /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+@media screen and (min-width:402px) and (max-width:900px){
 .blogPhotoDiv{
   display:flex;
   flex-direction: column;
@@ -226,5 +134,96 @@
   margin-top:2%;
 }
 
+  /*To ensure on ipad screens and larger mobiles that the ground extends to meet the upper margin of the darker body colour */
+  #ground{
+    width:400vw;
+    x:-50px;
+    y:480px;
+    height:400px;
+ } 
+
 }
 
+@media screen and (max-width:480px) {
+
+ /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
+
+.mountainForeground, .mountainMiddle, .mountainBackground{
+  transform:scale(50%) translate(-150px,0px);
+  -webkit-transform:scale(50%) translate(-150px,0px);
+  -moz-transform:scale(50%) translate(-150px,0px);
+  -ms-transform:scale(50%) translate(-150px,0px);
+  -o-transform:scale(50%) translate(-150px,0px);
+}
+
+#gradSpringSun{
+  transform:translateY(-300px);
+  -webkit-transform:translateY(-300px);
+  -moz-transform:translateY(-300px);
+  -ms-transform:translateY(-300px);
+  -o-transform:translateY(-300px);
+}
+
+#ground{
+width:400vw;
+x:-50px;
+y:260px;
+height:400px;
+} 
+
+.April2024header {
+display:block;
+text-align: center;
+font-size: 1.75em;
+color:white;
+font-weight: bold;
+border:solid 3px;
+width: 100vw;
+height: 50vh;
+background: #e1eae7;
+position:absolute; 
+
+} 
+
+#swaledaleSheep1{ transform:scale(50%) translate(-200px,0px); -webkit-transform:scale(50%) translate(-200px,0px); -moz-transform:scale(50%) translate(-200px,0px); -ms-transform:scale(50%) translate(-200px,0px); -o-transform:scale(50%) translate(-200px,0px); overflow: visible;
+}
+
+#swaledaleSheep2{
+  transform:scale(50%) translate(-600px,0px);
+  -webkit-transform:scale(50%) translate(-600px,0px);
+  -moz-transform:scale(50%) translate(-600px,0px);
+  -ms-transform:scale(50%) translate(-600px,0px);
+  -o-transform:scale(50%) translate(-600px,0px);
+  overflow: visible;
+}
+
+#lamb1{
+  transform:scale(60%) translate(-200px,0px);
+  -webkit-transform:scale(60%) translate(-200px,0px);
+  -moz-transform:scale(60%) translate(-200px,0px);
+  -ms-transform:scale(60%) translate(-200px,0px);
+  -o-transform:scale(60%) translate(-200px,0px);
+  overflow: visible;
+}
+
+
+#lamb2{
+  transform:scale(60%) translate(-200px,0px);
+  -webkit-transform:scale(60%) translate(-200px,0px);
+  -moz-transform:scale(60%) translate(-200px,0px);
+  -ms-transform:scale(60%) translate(-200px,0px);
+  -o-transform:scale(60%) translate(-200px,0px);
+  overflow: visible;
+}
+
+/*To ensure on mobile screens below 480px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+.blogPhotoDiv{
+display:flex;
+flex-direction: column;
+background-color: #b3e5ab;
+padding-bottom: 15%;
+padding-top: 5%;
+margin-top:2%;
+}
+
+}
