--- a/src/May2024.css
+++ b/src/May2024.css
@@ -124,18 +124,18 @@
     border-radius:30px;
     }
 
-    figMay{
+    figmay{
         display: flex;
         flex-direction: column;
         margin-left: auto;
         margin-right:auto;
       }
       
-      figMay img {
+      figmay img {
         vertical-align: top;
       }
 
-      figMay figcaptionMay {
+      figmay figcaptionmay {
         text-align: center;
         font-family: bold;
         color:#36454F;
