--- a/src/May2024.css
+++ b/src/May2024.css
@@ -162,6 +162,23 @@
     -o-border-radius:40px;
 }      
 
+.slideshowentry1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events:none; 
+  width:15%;
+  height:auto;
+  border:solid grey 2px;
+  border-radius:50%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:40px;
+  -moz-border-radius:40px;
+  -ms-border-radius:40px;
+  -o-border-radius:40px;
+}      
+
 .slideshowinstructions {
     margin-top:5%;
     margin-bottom:2%;
@@ -181,7 +198,7 @@
     justify-content:center;
     text-align:center;
   }
- 
+
       /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
 @media screen and (min-width:402px) and (max-width:900px){
   .blogPhotoDiv{
