Addition Hadrian's Wall Blog Intro and Day 1

--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -1,45 +1,43 @@
 #button{
+  display:block;
+  position:absolute;
+  height:50px;
+  width:20%;
+  background-color:gray;
+  border:black 2px solid;
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+  color:white;
+  text-decoration: underline;
+  margin:5% 20% 5% 60%;
+  border-radius:15%;
+  -webkit-border-radius:15%;
+  -moz-border-radius:15%;
+  -ms-border-radius:15%;
+  -o-border-radius:15%;
+} 
+
+@media screen and (max-width:601px) {
+  body #button{
     display:block;
-    position:absolute;
-    height:50px;
-    width:20%;
+    position:relative;
+    height:auto;
+    width:60%;
     background-color:gray;
     border:black 2px solid;
-    text-align: center;
+    text-align:center;
     font-size: large;
     font-weight: bold;
+    padding:2%;
     color:white;
-    text-decoration: underline;
-    margin:5% 20% 5% 60%;
+    margin-top: 15%;
+    margin-left:25%;
+    margin-right:25%;
     border-radius:15%;
     -webkit-border-radius:15%;
     -moz-border-radius:15%;
     -ms-border-radius:15%;
     -o-border-radius:15%;
-  } 
-
-  @media screen and (max-width:401px) {
-    body #button{
-      display:block;
-      position:absolute;
-      height:auto;
-      width:60%;
-      background-color:gray;
-      border:black 2px solid;
-      text-align:center;
-      font-size: large;
-      font-weight: bold;
-      padding:2%;
-      color:white;
-      margin-top: 11%;
-      margin-left:25%;
-      margin-right:25%;
-      border-radius:15%;
-      -webkit-border-radius:15%;
-      -moz-border-radius:15%;
-      -ms-border-radius:15%;
-      -o-border-radius:15%;
-    }  
-
-  }
-
+  }  
+}
