--- a/src/June2024.css
+++ b/src/June2024.css
@@ -1,28 +1,44 @@
-.headerPhoto{
-    width:70%;
+.June2024header {
+  display:block;
+  text-align: center;
+  font-size: 1.75em;
+  color:white;
+  font-weight: bold;
+  width: 100vw;
+  height:auto;
+  position:absolute; 
+  } 
+
+.headerPhotoJune{
+    width:50%;
     height:auto;
-    border:#757c88 solid 8px;
+    border:#b5a642 solid 10px;
+    border-radius:50%;
     margin:auto;
-    pointer-events: none; 
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    -ms-border-radius:50%;
+    -o-border-radius:50%;
 }
 
 .backbuttonLink{
     color:white
     } 
   
-  .datenewsDiv{
-    border:solid #757c88 4px;
-    background-color:#9bc4d4;
+  .datenewsDivJune{
+    background-color: #0492c2;
     display:flex;
     flex-direction:column;
-    margin-top: 10vh;
-    margin-bottom:5vh;
+    margin-top: 0vh;
+    margin-bottom:0vh;
+    padding-top: 5vh;
+    padding-bottom:5vh;
 }
   
-  .date{
-    color:#36454F;
-    border:solid 3px #757c88;
-    background-color:#8bb285;
+  .dateJune{
+    color:white;
+    border:solid 2px #757c88;
+    background-color:#48AAAD;
     text-align: center;
     padding:10px 10px 10px 10px;
     margin:5px;
@@ -31,10 +47,10 @@
     font-weight: bold;
   }
   
-  .newsheader{
-    color:#36454F;
-    border:solid 3px #757c88;
-    background-color:#8bb285;
+  .newsheaderJune{
+    color:white;
+    border:solid 2px #757c88;
+    background-color:#48AAAD;
     text-align: center;
     padding:10px 10px 10px 10px;
     margin:5px;
@@ -43,137 +59,70 @@
     font-weight:bold;
   }
   
-  .news{
-    color:#36454F;
-    border:solid 3px #757c88;
-    background-color:#8bb285;
+  .newsJune{
+    color:white;
+    border:solid 2px #757c88;
+    background-color:#48AAAD;
     text-align: left;
     padding:10px 10px 10px 10px;
-    margin:5px;
+    margin-top:1%;
+    margin-bottom: 0vh;
     font-size:1.0rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight:bold;
   }
-  
-  #JillLindisfarne1993img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    /* pointer-events:none;  */
-    width:35%;
-    height:auto;
-    border:solid grey 2px;
-    border-radius:50%;
-    margin-top:3%;
-    margin-bottom:5%;
-    -webkit-border-radius:40px;
-    -moz-border-radius:40px;
-    -ms-border-radius:40px;
-    -o-border-radius:40px;
-  }
-  
-  .blogPhotoDiv{
+
+  .blogPhotoDivJune{
     display:flex;
     flex-direction: row;
-    background-color: #8bb285;
-    padding-bottom: 20%;
+    border:solid 2px #757c88;
+    background-color: #48AAAD;
+    padding-bottom: 5%;
     padding-top: 5%;
-    margin-top:2%;
+    margin-top:0vh;
   }
   
-  
-  
-  .blogPhoto img{
+  .blogPhotoJune img{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width:70%;
     height:70%;
-    border:solid grey;
-    border-radius:30px;
-    }
-  
-    figmay{
-        display: flex;
-        flex-direction: column;
-        margin-left: auto;
-        margin-right:auto;
-      }
-      
-      figmay img {
-        vertical-align: top;
-      }
-  
-      .mayfigcaption {
-        text-align: center;
-        font-family: bold;
-        color:#36454F;
-        font-size: 1.0rem;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        overflow-wrap:normal;
-        padding-top:5%;
-      }
-  
-    .slideshowentry {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    pointer-events:none; 
-    width:25%;
-    height:auto;
-    border:solid grey 2px;
+    border:solid #b5a642 10px;
     border-radius:50%;
-    margin-top:3%;
-    margin-bottom:5%;
-    -webkit-border-radius:40px;
-    -moz-border-radius:40px;
-    -ms-border-radius:40px;
-    -o-border-radius:40px;
-  }      
-  
-  .slideshowentry1 {
-  display: block;
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    -ms-border-radius:50%;
+    -o-border-radius:50%;
+}
+
+figjune{
+  display: flex;
+  flex-direction: column;
   margin-left: auto;
-  margin-right: auto;
-  pointer-events:none; 
-  width:15%;
-  height:auto;
-  border:solid grey 2px;
-  border-radius:50%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:40px;
-  -moz-border-radius:40px;
-  -ms-border-radius:40px;
-  -o-border-radius:40px;
-  }      
-  
-  .slideshowinstructions {
-    margin-top:5%;
-    margin-bottom:2%;
-    font-size:1.2rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display:inline-block;
-    color:#36454F; 
-  }
-  
-  .SlideshowHostPhoto{
-    display:flex;
-    flex-direction: column;
-    background-color: #8bb285;
-    padding-bottom: 5%;
-    padding-top: 5%;
-    margin-top:2%;
-    justify-content:center;
-    text-align:center;
-  }
+  margin-right:auto;
+}
+
+figjune img {
+  vertical-align: top;
+}
+
+.junefigcaption {
+  text-align: center;
+  font-family: bold;
+  color:white;
+  font-size: 1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  overflow-wrap:normal;
+  padding-top:5%;
+}
   
       /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
   @media screen and (min-width:402px) and (max-width:900px){
-  .blogPhotoDiv{
+  .blogPhotoDivJune{
     display:flex;
     flex-direction: column;
-    background-color: #8bb285;
+    background-color: #48AAAD;
     padding-bottom: 15%;
     padding-top: 5%;
     margin-top:2%;
@@ -193,20 +142,16 @@
   font-size: 1.75em;
   color:white;
   font-weight: bold;
-  /* border:solid 3px; */
   width: 100vw;
-  /* height: 50vh; */
   height:auto;
-  background: #e1eae7;
   position:absolute; 
-  
   } 
   
   /*To ensure on mobile screens below 401px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-  .blogPhotoDiv{
+  .blogPhotoDivJune{
   display:flex;
   flex-direction: column;
-  background-color: #8bb285;
+  background-color: ;
   padding-bottom: 15%;
   padding-top: 5%;
   margin-top:2%;
