--- a/src/June2024.css
+++ b/src/June2024.css
@@ -116,6 +116,60 @@ figjune img {
   overflow-wrap:normal;
   padding-top:5%;
 }
+
+.slideshowentryJune {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events:none;
+  width:25%;
+  height:auto;
+  border:solid #b5a642 10px;
+  border-radius:100%;
+  margin-top:3%;
+  margin-bottom:5%;
+  -webkit-border-radius:100%;
+  -moz-border-radius:100%;
+  -ms-border-radius:100%;
+  -o-border-radius:100%;
+}      
+
+.slideshowentry1June {
+display: block;
+margin-left: auto;
+margin-right: auto;
+pointer-events:none; 
+width:15%;
+height:auto;
+border:solid #b5a642 10px;
+border-radius:50%;
+margin-top:3%;
+margin-bottom:5%;
+-webkit-border-radius:40px;
+-moz-border-radius:40px;
+-ms-border-radius:40px;
+-o-border-radius:40px;
+}      
+
+.slideshowinstructionsJune {
+  margin-top:5%;
+  margin-bottom:2%;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display:inline-block;
+  color:white; 
+}
+
+.SlideshowHostPhotoJune{
+  display:flex;
+  flex-direction: column;
+  background-color: #48AAAD;
+  padding-bottom: 5%;
+  padding-top: 5%;
+  margin-top:0vh;
+  justify-content:center;
+  text-align:center;
+}
   
       /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
   @media screen and (min-width:402px) and (max-width:900px){
