--- a/src/July2024.css
+++ b/src/July2024.css
@@ -56,6 +56,7 @@
       padding-top: 10vh;
       padding-bottom:5vh;
       
+      
   }
     
     .dateJuly{
@@ -65,15 +66,17 @@
       margin-top:0%;
       padding-top: 10px ;
       padding-bottom:10px; 
-      font-size:1.0rem;
+      font-size:1.2rem;
       font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       font-weight: bold;
+      border: solid 2px black;
+      
     }
     
     .newsheaderJuly{
       width:100%;
       color:#36454F;
-      border:solid 2px #757c88;
+      border:solid 2px black;
       background-color:#C291A4;
       text-align: center;
       padding-top:10px;
@@ -81,14 +84,14 @@
       margin-top:5px;
       margin-bottom:5px;
       margin-right:0px;
-      font-size:1.0rem;
+      font-size:1.2rem;
       font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       font-weight:bold;
     }
     
     .newsJuly{
       color:#36454F;
-      border:solid 2px #757c88;
+      border:solid 2px black;
       background-color:#C291A4;
       text-align: left;
       padding:20px 20px 20px 20px;
