--- a/src/components/eagle.css
+++ b/src/components/eagle.css
@@ -21,13 +21,13 @@
 @media screen and (max-width:480px) {
 	/*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
 	#Laag_1{
-		transform:scale(70%) translate(0px,0px);
-		-webkit-transform:scale(70%) translate(0px,0px);
-		-moz-transform:scale(70%) translate(0px,0px);
-		-ms-transform:scale(70%) translate(0px,0px);
-		-o-transform:scale(70%) translate(0px,0px);
-		margin-bottom:-20%;
-		width:75%;
+		transform:scale(90%) translate(0px,0px);
+		-webkit-transform:scale(90%) translate(0px,0px);
+		-moz-transform:scale(90%) translate(0px,0px);
+		-ms-transform:scale(90%) translate(0px,0px);
+		-o-transform:scale(90%) translate(0px,0px);
+		margin-bottom:-70%;
+		width:95%;
 		height:auto;
 }
 }
@@ -35,12 +35,13 @@
 @media screen and  (min-width:480px) and (max-width:901px) {
 	/*To ensure on mobile screens between 480px and 901px width (this includes ipads) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
 	#Laag_1{
-		transform:scale(65%) translate(0px,0px);
-		-webkit-transform:scale(65%) translate(0px,0px);
-		-moz-transform:scale(65%) translate(0px,0px);
-		-ms-transform:scale(65%) translate(0px,0px);
-		-o-transform:scale(65%) translate(0px,0px);
-		margin-bottom:-20%;
+		transform:scale(75%) translate(0px,0px);
+		-webkit-transform:scale(75%) translate(0px,0px);
+		-moz-transform:scale(75%) translate(0px,0px);
+		-ms-transform:scale(75%) translate(0px,0px);
+		-o-transform:scale(75%) translate(0px,0px);
+		margin-bottom:-30%;
+		margin-top:5%;
 		width:75%;
 		height:auto;
 }
@@ -49,11 +50,11 @@
 @media screen and (min-width:3000px) {
 	/*To ensure on mobile screens above 3000px width (this includes one plus phones) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
 	#Laag_1{
-		transform:scale(70%) translate(0px,0px);
-		-webkit-transform:scale(70%) translate(0px,-5%);
-		-moz-transform:scale(70%) translate(0px,0px);
-		-ms-transform:scale(70%) translate(0px,0px);
-		-o-transform:scale(70%) translate(0px,0px);
+		transform:scale(60%) translate(0px,0px);
+		-webkit-transform:scale(60%) translate(0px,0px);
+		-moz-transform:scale(60%) translate(0px,0px);
+		-ms-transform:scale(60%) translate(0px,0px);
+		-o-transform:scale(60%) translate(0px,0px);
 		margin-bottom:-20%;
 		width:75%;
 		height:auto;
