--- a/src/Hwp2024.css
+++ b/src/Hwp2024.css
@@ -51,6 +51,15 @@ h1 .hadrianswallTitle{
     color:white
     } 
 
+  .LinkHWP{
+    color:blueviolet;
+    font-weight: bold;
+  }
+
+  .BoldTitle{
+    font-weight:bold;
+  }
+
   .datenewsDivHwp{
       color:white;
       background-color:#850f55	;
@@ -122,7 +131,7 @@ h1 .hadrianswallTitle{
         pointer-events:none;
         width:80%;
         height:auto;
-        border:solid #66023c 8px;
+        border:solid #D5544F 5px;
         border-radius:80%;
         margin-top:5%;
         margin-bottom:5%;
