Addition 29th July 2024 Cycle to Carlisle

--- a/src/July2024.css
+++ b/src/July2024.css
@@ -8,6 +8,10 @@
   height:auto;
   position:absolute;
     } 
+
+  .LinkJuly2024 {
+    color:blueviolet;
+  }
   
   .headerPhotoJuly{
       width:40%;
